# lyo

./: .editorconfig  .gitignore  .project  .travis-ci.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.MD  CONTRIBUTING.md  Jenkinsfile  NOTICES.md  README.md  pom.xml  representations.aird  spotbugs-exclude.xml
.config/: eclipse-format.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  maven.yml
OSLC4J/: .classpath  .project  pom.xml
OSLC4JCoreRelEng/: .project  pom.xml
OSLC4JJenaProvider/: .classpath  .project  pom.xml
OSLC4JJson4JProvider/: .classpath  .project  pom.xml
OSLC4JRegistry/: .classpath  .project  pom.xml
OSLC4JStockQuote/: .classpath  .project  pom.xml
OSLC4JStockQuoteCommon/: .classpath  .project  pom.xml
OSLC4JStockQuoteTest/: .classpath  .project  pom.xml
OSLC4JTest/: .classpath  .project  pom.xml
OSLC4JTestCommon/: .classpath  .project  pom.xml
OSLC4JTestTest/: .classpath  .project  pom.xml
OSLC4JWink/: .classpath  .project  pom.xml
client/: CHANGELOG.md  README.md  pom.xml
client-source-mqtt/: pom.xml
config/: trsClient.properties
core/: CHANGELOG.md
doc/: build.md  store.md  store.wiki
docs/: Jena5_Migration_Guide.md
domains/: README.md
domains/model-sync/: README.md  SPEC.md  pyproject.toml
domains/model-sync/lyo_model_sync/: cli.py  sync.py
domains/model-sync/tests/: test_shape_namespace_handling.py  test_sync_shapes.py  test_sync_shapes_bugs.py  test_sync_shapes_extra.py  test_sync_shapes_oslc.py  test_sync_vocab.py
misc/: README.md  labels.json  sync-labels.rb
(+2803 files in other folders)
